--- a/FastGraph/FastGraph.csproj
+++ b/FastGraph/FastGraph.csproj
@@ -28,10 +28,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Graph.cs" />
+    <Compile Include="GraphNode.cs" />
+    <Compile Include="AxesModel.cs" />
+    <Compile Include="Rendering\Render.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Rendering\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
