--- a/FastGraph/FastGraph.csproj
+++ b/FastGraph/FastGraph.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Coordinate.cs" />
     <Compile Include="GraphStyle.cs" />
     <Compile Include="IO\FileInput.cs" />
+    <Compile Include="IO\FileInputException.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Rendering\" />
